# jentic-one

./: .dockerignore  .gitignore  .release-please-manifest.json  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  Makefile  README.md  VERSIONING.md  compose.barrikade.yml  compose.parallel.yml  pyproject.toml  release-please-config.json
.claude/: CLAUDE.md
.claude/rules/: python-code-style.md  testing.md  update-tech-stack-on-deps.md  worktrees.md
.claude/skills/sdd-implement-spec/: SKILL.md
.claude/skills/sdd-new-spec/: SKILL.md
.github/: PR_BODY_monitor_page.md  labels.yml
.github/ISSUE_TEMPLATE/: 01-pain-point.yml  02-bug.yml  03-feature.yml  04-idea.yml  05-docs.yml  bug.yml  config.yml  request.yml
.github/workflows/: ci-backend.yml  ci-docker.yml  ci-ui.yml  ci.yml  dependabot-merge.yml  intake-output-guard.yml  issue-intake-followup.yml  issue-intake-label.yml  label-guard.yml  labels-sync.yml  notify-new-feedback.yml  release-please.yml  release.yml  smoke-helm.yml
.harness/: GARBAGE_COL_DOCS.md  GARBAGE_COL_STANDARDS.md  ISSUE_INTAKE_STANDARDS.md  setup.sh
alembic/versions/: 0007_jobs_agent_id.py  0007_monitor_links.py  0008_credentials_health.py
cli/: .goreleaser.yaml  CHANGELOG.md  Makefile  README.md
cli/internal/accessclient/: client.go
cli/internal/catalogclient/: client.go
cli/internal/cmd/: access.go  access_plan_test.go  access_test.go  apis.go  app.go  catalog.go  catalog_browser.go  catalog_test.go  cmd_test.go  common.go  execute.go  install.go  install_test.go  root.go  uninstall.go  uninstall_test.go  update.go
cli/internal/config/: file.go  file_test.go  paths.go  paths_test.go
cli/internal/install/: build.go  draft.go  preflight.go  render.go  render_test.go  reuse.go  reuse_test.go  secrets.go  secrets_test.go
cli/internal/skillgen/: bundled.go  skillgen_test.go
cli/internal/update/: update.go  update_test.go  version.go  version_test.go
cli/pkg/clitree/: clitree.go  clitree_test.go
cli/pkg/core/: container.go  container_test.go  run_test.go
config/: README.md
deploy/: README.md
deploy/docker/: admin.Dockerfile  python-base.Dockerfile
deploy/helm/jentic-one/: Chart.yaml
deploy/helm/observability/: Chart.yaml
deploy/helm/values/: local-combined.yaml  local-parts.yaml
docker/local-setup/: docker-compose.yaml  init-schemas.sql
docs/: README.md  context-and-config.md  credential-deeplink.md  credentials-and-toolkits.md  monitor-page-plan.md  monitor.md  product-scope.md  release-procedure.md  releasing.md  workflows.md
docs/development/: extending-jentic-one.md  local-setup.md
docs/plans/: cli-update-rework.md  credentials-audit-round2-fixes.plan.md  credentials-review-fixes.plan.md  frontend-sessions-backend-data-contract.md  llm-gateway-and-sessions-implementation.md  llm-proxy-sessions.md  provisioning-plan-access-request.md  reduce-tools-to-first-execution.md  release-procedure.md  security-orphaned-mini-package.md  toolkit-detail-sheet.plan.md  version-notifications-remote-client.md
docs/reference/: endpoints.json  endpoints.md
openapi/broker/: broker.openapi.yaml
openapi/control/: control.openapi.yaml
scripts/: dev-up.sh  e2e_smoke.py  flywheel_manual.py  rules-clone.sh  seed_monitor_data.py  seed_workspace_demo.py  setup.sh
scripts/barrikade/: start-stack.sh
skills/contribute-spec-fix/: SKILL.md
specs/: lessons.md
specs/2026-05-20-migrate-pdm-to-uv/: plan.md  requirements.md  retrospective.draft.md  retrospective.md  validation.md
src/: audit.py  auth.py  config.py  db.py  main.py  models.py  vault.py
src/brokers/: pipedream.py
src/jentic_one/: __init__.py  __main__.py  wiring.py
src/jentic_one/broker/: default_broker.py
src/jentic_one/migrations/: env.py  run.py  targets.py
src/jentic_one/shared/: access_guidance.py  config.py  scopes.py  slug.py  url.py
src/jentic_one/testing/: __init__.py  compliance.py
src/routers/: apis.py  broker.py  catalog.py  credentials.py  import_.py  jobs.py  oauth_brokers.py  search.py  toolkits.py  traces.py  workflows.py
src/security/: __init__.py  plugin.py  registry.py  utils.py
tests/: test_auth_boundary_comprehensive.py  test_broker_header_hygiene.py  test_cascade_delete.py  test_credential_health.py  test_credentials_tier1.py  test_execution_steps_writer.py  test_jobs_filters.py  test_jobs_parent_trace.py  test_jobs_tenant_scope.py  test_jwt_username.py  test_killswitch_enforcement.py  test_monitor_search_q.py  test_multi_source_lifecycle.py  test_oauth_broker_sync_auth_error.py  test_operations_pagination.py  test_preview_catalog_operations_parser.py  test_preview_catalog_workflows.py  test_reimport_links.py  test_search_filters.py  test_search_relevance_fields.py  test_seed_workspace_demo.py  test_toolkit_agents.py  test_traces_api_id_column.py  test_traces_children.py  test_traces_filters.py  test_traces_inputs_outputs.py  test_traces_usage.py  test_traces_xlinks.py  test_workflows_pagination.py  test_workspace_lifecycle.py
tests/arch/: _rules_facts.py  test_orm_conventions.py  test_rules_facts_vendored.py  test_scope_catalog.py
tests/integration/admin/: test_execution_record_repository.py  test_invite_token_repository.py  test_monitoring_repo.py
tests/integration/auth/: test_toolkit_name_repo.py
tests/smoke/: conftest.py  test_agent_access_requests.py  test_agent_registration.py  test_toolkit_lifecycle.py
tests/tools/: install_test.sh
tests/unit/: test_config.py  test_config_extensions.py  test_migrations.py  test_version.py
tests/web/: test_flywheel.py
tools/: install-README.md  install.sh
ui/: BUILD_REPORT.md  README.md  eslint.config.js  openapi.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.lint.config.ts
ui/e2e/: catalog.spec.ts  credentials.spec.ts  fixtures.ts  jobs.spec.ts  search.spec.ts  toolkits.spec.ts  traces.spec.ts  workflows.spec.ts
ui/prototypes/: sessions.html
ui/public/: cli-reference.json
ui/scripts/: enrich-sessions-mock.mjs
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: client.ts  (+1 more)
(+886 files in other folders)
