[project]
name = "jentic-mini"
version = "0.13.2"
description = "Self-hosted Jentic API — search, broker, observe"
readme = "README.md"
authors = [{ name = "Jentic", email = "hello@jentic.com" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.136.1",
  "uvicorn[standard]==0.47.0",
  "httpx==0.28.1",
  "aiohttp>=3.9,<4",
  "cryptography==48.0.0",
  "rank-bm25==0.2.2",
  "pyyaml==6.0.3",
  "aiosqlite==0.22.1",
  "bcrypt==5.0.0",
  "pyjwt==2.13.0",
  "python-multipart>=0.0.27",
  "alembic>=1.18.4,<2",
  "jentic-openapi-common>=1.0.0a51",
  "arazzo-runner>=0.9.5",
]

[project.urls]
Homepage = "https://github.com/jentic/jentic-mini"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=0.24,<2",
    "schemathesis>=4.15.0",
    "ruff>=0.15.14,<0.16.0",
    "poethepoet>=0.37,<0.47",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "PLC0415", "PLC2701"]
preview = true
explicit-preview-rules = true

[tool.ruff.lint.per-file-ignores]
# conftest.py must set os.environ before any src.* imports, because
# src/config.py reads DB_PATH at import time.
"tests/conftest.py" = ["E402", "PLC0415"]
# Tests routinely exercise private helpers from src/* (parser internals,
# scoring functions, etc.) — that's the whole point of unit-level tests.
# PLC2701 protects against private-name imports in production code; in
# `tests/**/*.py` it just gets in the way.
"tests/**/*.py" = ["PLC2701"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.poe.tasks.lint]
sequence = [
  { cmd = "ruff check" },
  { cmd = "ruff format --check --diff" },
]

[tool.poe.tasks."lint:ci"]
sequence = [
  { cmd = "ruff check --output-format=github" },
  { cmd = "ruff format --check --diff" },
]

[tool.poe.tasks."lint:fix"]
sequence = [
  { cmd = "ruff check --fix" },
  { cmd = "ruff format" },
]

[tool.poe.tasks.test]
cmd = "pytest -v ${target} --tb=short"
args = [{name = "target", default = "tests", positional = true}]
env = { PYTHONPATH = "." }
